--- a/notebooks/data_analysis.ipynb
+++ b/notebooks/data_analysis.ipynb
@@ -141,6 +141,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "artist_name    64158\ngenre             82\nkey               12\nmode               2\ndtype: int64"
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check number of categories for (potential) categorical features\n",
+    "df[[\"artist_name\", \"genre\", \"key\", \"mode\"]].nunique()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-13T09:35:04.043707900Z",
+     "start_time": "2023-07-13T09:35:03.790246300Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "outputs": [
     {
@@ -161,6 +186,7 @@
     }
    ],
    "source": [
+    "# distribution of the number of songs per artist\n",
     "import seaborn as sns\n",
     "sns.ecdfplot(df[\"artist_name\"].value_counts(), log_scale=True)"
    ],
@@ -214,6 +240,7 @@
     }
    ],
    "source": [
+    "# inspect distributions of unnormalised numeric features to determine reasonable normalisations\n",
     "for col in [\"loudness\", \"tempo\", \"duration_ms\"]:\n",
     "    sns.displot(df[col])"
    ],
