Modify notebook of step 0, to make it runnable

--- a/refactoring-journey/step00-monolithic-notebook/spotify-song-popularity-prediction.ipynb
+++ b/refactoring-journey/step00-monolithic-notebook/spotify-song-popularity-prediction.ipynb
@@ -24,58 +24,10 @@
   {
    "cell_type": "code",
    "source": [
-    "# This Python 3 environment comes with many helpful analytics libraries installed\n",
-    "# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python\n",
-    "# For example, here's several helpful packages to load\n",
-    "\n",
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-    "\n",
-    "# Input data files are available in the read-only \"../input/\" directory\n",
-    "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
-    "\n",
-    "import os\n",
-    "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
-    "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename))\n",
-    "\n",
-    "# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\" \n",
-    "# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session"
-   ],
-   "metadata": {
-    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
-    "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
-    "execution": {
-     "iopub.status.busy": "2023-07-10T22:16:51.27879Z",
-     "iopub.execute_input": "2023-07-10T22:16:51.279319Z",
-     "iopub.status.idle": "2023-07-10T22:16:51.328017Z",
-     "shell.execute_reply.started": "2023-07-10T22:16:51.27929Z",
-     "shell.execute_reply": "2023-07-10T22:16:51.326852Z"
-    },
-    "trusted": true
-   },
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "#I'll be updating the file later - with comments and explanations"
-   ],
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "source": [
     "#importing necessary libraries and packages\n",
-    "import sys\n",
     "import os\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import seaborn as sns\n"
    ],
    "metadata": {
     "execution": {
@@ -94,7 +46,8 @@
    "cell_type": "code",
    "source": [
     "#loading the spotify 1 million songs data set\n",
-    "spotify_tracks = pd.read_csv('/kaggle/input/spotify-1million-tracks/spotify_data.csv')"
+    "data_path = os.path.join(os.getcwd(), \"..\", \"..\", \"data\", \"spotify_data.csv\")\n",
+    "spotify_tracks = pd.read_csv(data_path)"
    ],
    "metadata": {
     "execution": {
